# book

./: .gitignore  build.sh  download_covers.py  generate_books.py  index.html  main.py  pyproject.toml  reset_cover_status.py  script.js  style.css
backend/: auth.py  covers_util.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/res/: index.html
backend/res/assets/: AdminView-Cg7O_dTY.js  AdminView-PQmofw0M.css  BookCard-BTnDYcWW.css  BookCard-ChjQ2ZDs.js  BookDetailView-BpCMTwB3.js  BookDetailView-CAhx1apK.css  CategoryView-BXezLk0l.js  CategoryView-D36PHHHR.css  HomeView-DPWLOQXi.css  HomeView-lH5N_VHo.js  LoginView-BPN_V46X.css  LoginView-BiYTW9yK.js  NavBar-Bo8ctT8e.css  NavBar-CTnWawuH.js  ProfileView-D4lz_GI1.css  ProfileView-KkMwiZf8.js  index-Bd2pFcCM.css  index-C45fDmSP.js  index-Mo_pLZJU.js
backend/routers/: admin.py  batch.py  books.py  borrow.py  messages.py  social.py  users.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: md3.css
frontend/src/components/: BookCard.vue  NavBar.vue
frontend/src/router/: index.js
frontend/src/views/: AdminView.vue  BookDetailView.vue  CategoryView.vue  HomeView.vue  LoginView.vue  ProfileView.vue  SuperAdminView.vue
