# d:\tool\book\pyproject.toml

[project]
name = "book-management-system"
version = "1.1.0"
description = "Library Management System with FastAPI and Vue"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pandas",
    "openpyxl",
    "httpx",
    "numpy>=2.1.0",  # Python 3.13 需要 NumPy 2.1+
    "PyJWT",
]

[tool.uv]
package = false