# d:\tool\book\pyproject.toml

[project]
name = "book-management-system"
version = "1.1.0"
description = "Library Management System with FastAPI and Vue"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pandas",
    "openpyxl",
    "httpx",
    "numpy",  # Will resolve to compatible version
    "PyJWT",
]

[tool.uv]
package = false